# Difference-Calculator

./: Makefile  README.md  pyproject.toml
.github/workflows/: README.md  action.yml
gendiff/: __init__.py  cli.py  comparisator.py  diff_run.py  gendiff.py  json.py  plain.py  reader.py  stylish.py  to_string.py
gendiff/formats/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff_help.py  gendiff_script.py  gener_diff.py  generate_diff.py
tests/: test_comparisator.py  test_gendiff.py  test_json.py  test_plain.py  test_reader.py  test_stylish.py  test_to_string.py
tests/fixtures/: file1.json  result_json  result_plain  result_stylish  test2_jsn.json  test_jsn.json
