[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Glam52 <gla_max@outlook.com>"]
readme = "README.md"
packages = [
  { include = "gendiff" },
  { include = "tests"}
]


[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.2.0"
black = "^24.4.2"
pytest-cov = "^4.1.0"
coveralls = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gendiff ="gendiff.scripts.gener_diff:main"

[tool.black]
line-length = 80
